--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "typings": "./main.d.ts",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ag-grid/ag-grid.git"
+    "url": "https://github.com/outbrain/ag-grid-18.git"
   },
   "keywords": [
     "web-components",
@@ -33,7 +33,7 @@
   "author": "Niall Crosby <niall.crosby@ag-grid.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/ag-grid/ag-grid/issues"
+    "url": "https://github.com/outbrain/ag-grid-18/issues"
   },
   "homepage": "http://www.ag-grid.com/",
   "devDependencies": {
